// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given a FavouritesContainer - FavouritesContainer should render as expected  when it is Loading 1`] = `
<DocumentFragment>
  .c0 {
  position: absolute;
  bottom: 1.125rem;
  right: 0.625rem;
  border: .0625rem solid #9e9e9e;
  background: #fff;
  border-radius: 50%;
  cursor: pointer;
  z-index: 100;
  height: 2.25rem;
  width: 2.25rem;
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`Given a FavouritesContainer - FavouritesContainer should render as expected when it is Active 1`] = `
<DocumentFragment>
  .c0 {
  position: absolute;
  bottom: 1.125rem;
  right: 0.625rem;
  border: .0625rem solid #9e9e9e;
  background: #fff;
  border-radius: 50%;
  cursor: pointer;
  z-index: 100;
  height: 2.25rem;
  width: 2.25rem;
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`Given a FavouritesIcon - FavouritesIcon should render as expected when favState is active 1`] = `
<DocumentFragment>
  .c0.c0 {
  -webkit-transform: rotateZ(-0.0000000001deg);
  -ms-transform: rotateZ(-0.0000000001deg);
  transform: rotateZ(-0.0000000001deg);
  width: 100%;
  height: 100%;
  -webkit-animation: favourite-loaded 1s ease-in-out;
  animation: favourite-loaded 1s ease-in-out;
}

@media all and (-ms-high-contrast:none) {
  .c0.c0 {
    background-image: url(/static-content/icons/shared/favourites-active.png);
    background-repeat: no-repeat;
    background-size: 100% 100%;
  }
}

<svg
    class="c0"
  />
</DocumentFragment>
`;

exports[`Given a FavouritesIcon - FavouritesIcon should render as expected when favState is inactive 1`] = `
<DocumentFragment>
  .c0.c0 {
  -webkit-transform: rotateZ(-0.0000000001deg);
  -ms-transform: rotateZ(-0.0000000001deg);
  transform: rotateZ(-0.0000000001deg);
  width: 100%;
  height: 100%;
}

@media all and (-ms-high-contrast:none) {
  .c0.c0 {
    background-image: url(/static-content/icons/shared/favourites-inactive.png);
    background-repeat: no-repeat;
    background-size: 100% 100%;
  }
}

<svg
    class="c0"
  />
</DocumentFragment>
`;

exports[`Given a FavouritesIcon - FavouritesIcon should render as expected when favState is loading 1`] = `
<DocumentFragment>
  .c0.c0 {
  -webkit-transform: rotateZ(-0.0000000001deg);
  -ms-transform: rotateZ(-0.0000000001deg);
  transform: rotateZ(-0.0000000001deg);
  width: 100%;
  height: 100%;
  stroke-dasharray: 40;
  stroke-dashoffset: 80;
  stroke-linecap: round;
  -webkit-animation: favourite-loading 0.8s linear infinite reverse;
  animation: favourite-loading 0.8s linear infinite reverse;
}

@media all and (-ms-high-contrast:none) {
  .c0.c0 {
    background-image: url(/static-content/icons/shared/favourites-loading.gif);
    background-repeat: no-repeat;
    background-size: 100% 100%;
  }
}

<svg
    class="c0"
  />
</DocumentFragment>
`;
